# PHAREMHD

./: .gitignore  CMakeLists.txt  README.md  mkn.yaml  py.py  pybind.cmake
.github/workflows/: build.yml
diagnostics/: plotquantities.py
diagnostics/Hallharris/: colormesh.py  colormesh2.py  colormesh_anim.py  hallharris.py
diagnostics/MHDrotor/: MHDrotor.py  colormesh.py  colormesh_anim.py
diagnostics/alfvenwave/: Initialisation.hpp  MHDProblem.cpp  contourplot.py  plotquantities.py
diagnostics/alfvenwave/X/space_convergence/: Initialisation.hpp  space_convergence.py  space_convergence_plot.py
diagnostics/alfvenwave/X/time_convergence/: Initialisation.hpp  time_convergence.py
diagnostics/alfvenwave/Y/space_convergence/: Initialisation.hpp  space_convergence.py  space_convergence_plot.py
diagnostics/alfvenwave/Y/time_convergence/: Initialisation.hpp  time_convergence.py
diagnostics/alfvenwave/_X/space_convergence/: Initialisation.hpp  space_convergence.cpp  space_convergence.py  space_convergence_plot.py
diagnostics/alfvenwave/_X/time_convergence/: Initialisation.hpp  time_convergence.cpp  time_convergence.py
diagnostics/alfvenwave/_Y/space_convergence/: Initialisation.hpp  space_convergence.cpp  space_convergence.py  space_convergence_plot.py
diagnostics/alfvenwave/_Y/time_convergence/: Initialisation.hpp  time_convergence.py
diagnostics/alfvenwave/space_convergence/: Initialisation.hpp  space_convergence.cpp  space_convergence.py
diagnostics/alfvenwave/time_convergence/: Initialisation.hpp  time_convergence.cpp  time_convergence.py
diagnostics/alfvenwave2D/: Initialisation.hpp  Initialisation2.hpp  MHDProblem.cpp  alfvenwave2D.py  colormesh.py  colormesh_anim.py  plotquantities.py
diagnostics/animation/: Initialisation.hpp  MHDProblem.cpp  plotquantities.py
diagnostics/currentsheet/: colormesh_anim.py  current.py
diagnostics/harris/: colormesh.py  colormesh_anim.py  harris.py
diagnostics/orszag-tang/: colormesh.py  colormesh_anim.py  orszagtang.py  plotJ.py
diagnostics/shock/: plot_anim.py  plots.py  shock.py
diagnostics/whislerwave/: fft.py  plotJ.py  plot_anim.py  whislerwave.py
diagnostics/whislerwave/space_convergence/: space_convergence_plot.py  whislerwave.py
diagnostics/whistlerwave/: fft.py  plot.py  plotFlux.py  plotJ.py  plot_anim.py  whislerwave.py  whislerwaveX.py  whislerwaveY.py
diagnostics/whistlerwave/space_convergence/: plot_anim.py  space_convergence_plot.py  whislerwave.py
diagnostics/whistlerwave2D/: whislerwaveX.py
pyMHD/: initial_conditions.py  py.py  pyMHD.cpp  writting_utils.py
src/: AddGhostCells.hpp  CMakeLists.txt  CheckDivB.hpp  ComputeJ.hpp  ComputeNewDt.hpp  ComputeRiemannJ.hpp  ConservativeVariables.cpp  ConservativeVariables.hpp  ConservativeVariablesCC.cpp  ConservativeVariablesCC.hpp  ConstainedTransport.cpp  ConstainedTransport.hpp  ConstrainedTransport.cpp  ConstrainedTransport.hpp  Enums.hpp  EquationOfState.cpp  EquationOfState.hpp  Fluid.hpp  GodunovFlux.cpp  GodunovFlux.hpp  Grid.cpp  Grid.hpp  Initialisation.hpp  Interface.cpp  Interface.hpp  MHDProblem.cpp  MHDProblem.hpp  ModularityUtils.cpp  ModularityUtils.hpp  PhareMHD.cpp  PhareMHD.hpp  PhysicalConstants.cpp  PhysicalConstants.hpp  PrimitiveVariables.cpp  PrimitiveVariables.hpp  PrimitiveVariablesCC.cpp  PrimitiveVariablesCC.hpp  PrimitiveVariablesFC.hpp  ReconstructedValues.hpp  RiemannSolver.cpp  (+8 more)
